fix warnings in ide